@@ -217,23 +217,34 @@ def check_update(*w):
         from lib import AILURUS_RELEASE_DATE as OLD_RELEASE_DATE
     
         import urllib2
-        f = urllib2.urlopen('http://ailurus.googlecode.com/files/latest')
-        release_date_string = f.readline().strip()
-        deb_file_name = f.readline().strip()
+        import re
+        if Config.is_Fedora():
+            filename_pattern = r'ailurus_.+\.rpm'
+        else:
+            filename_pattern = r'ailurus_.+\.deb'
+        version_pattern = r'ailurus_(.+)-.+'
+        lastest_version = AILURUS_VERSION
+        lastest_filename = ''
+        f = urllib2.urlopen('http://code.google.com/p/ailurus/downloads/list')
+        for line in f.readlines():
+            filenames = re.findall(filename_pattern, line)
+            for filename in filenames:
+                match = re.search(version_pattern, filename)
+                version = match.group(1)
+                if version.split('.') > lastest_version.split('.'):
+                    lastest_version = version
+                    lastest_filename = filename
         f.close()
-        
-        new_release_date = to_date(release_date_string)
-        old_release_date = to_date(OLD_RELEASE_DATE)
-        
         import gtk
         dlg = gtk.Dialog(_('Updates for Ailurus'),
                          None, gtk.DIALOG_NO_SEPARATOR,
                          (gtk.STOCK_CLOSE, gtk.RESPONSE_OK))
         vbox = gtk.VBox(False, 5)
-        if new_release_date > old_release_date:
-            label = gtk.Label( _('A new version is released at %(date)s.')
-                           %{'date':release_date_string})
-            button = url_button('http://ailurus.googlecode.com/files/'+deb_file_name)
+        if lastest_filename:
+            label = gtk.Label( _('A new version of Ailurus is released: version %s.\n'
+                                 'You can download this version from this direct link:')
+                           %lastest_version)
+            button = url_button('http://ailurus.googlecode.com/files/'+lastest_filename)
             vbox.pack_start(label)
             vbox.pack_start(button, False)
         else:
