@@ -1,0 +1,26 @@
+#!/usr/bin/env python
+#-*- coding: utf-8 -*-
+#
+# Ailurus - make Linux easier to use
+#
+# Copyright (C) 2007-2010, Trusted Digital Technology Laboratory, Shanghai Jiao Tong University, China.
+#
+# Ailurus is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# Ailurus is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Ailurus; if not, write to the Free Software Foundation, Inc.,
+# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
+
+from rpm_recovery_pane import FedoraRPMRecoveryPane
+
+def register(main_view):
+    pane = FedoraRPMRecoveryPane(main_view)
+    main_view.register(pane)
