@@ -129,18 +129,22 @@ class FastestRepositoryDialog(gtk.Dialog):
         self.connect('delete-event', self._before_delete_event)
         self.progress_label = gtk.Label()
         self.progress_bar = gtk.ProgressBar()
+        self.timeleft_label = gtk.Label()
         self.button_start = gtk.Button('Start')
         self.button_start.connect('clicked', self.start)
         self.vbox.set_spacing(10)
         self.set_border_width(10)
         self.vbox.pack_start(self.progress_label, False)
         self.vbox.pack_start(self.progress_bar, False)
+        self.vbox.pack_start(self.timeleft_label, False)
         self.show_all()
     def refresh_GUI(self):
         pass
     def start(self, *w):
-
+        import time
+        begintime = time.time()
         def show_result():
+            currenttime = time.time()
             len_result = len(result)
             if len_result: server, value = result[-1]
 
@@ -157,6 +161,14 @@ class FastestRepositoryDialog(gtk.Dialog):
             elif value == 'cannot ping' or value == 'unreachable':
                 text = _("<span color='black'>Server %s is unreachable.</span>") % server
             self.progress_label.set_markup(text)
+            #display time left
+            if len_result >= 40:
+                timeleft = float(total-len_result) * (currenttime-begintime) / (len_result)
+                text = _("<span color='black'>Time left: %s</span>") % derive_time(int(timeleft))
+            else:
+                text = _("<span color='black'>Time left: %s</span>") % _("unknown")
+            if len_result % 5 == 0:
+                self.timeleft_label.set_markup(text)
             
             self.refresh_GUI()
 
